--- a/action.yml
+++ b/action.yml
@@ -9,23 +9,32 @@ inputs:
 runs:
   using: "composite"
   steps: 
-    - run: |
-            D:\arma3work\drive\_work\Schedule_Task_Wait.ps1 {{ inputs.objectvar }}_Build
-            Write-Host ""
-            rm D:\arma3work\Modpack_TestServer\@Vahana-Life-TestServer\addons\{{ inputs.objectvar }}*
-            rm D:\cloud\Shares\Modpack_TestServer\@Vahana-Life-TestServer\addons\{{ inputs.objectvar }}*
-            Write-Host ""
-            Copy-item -Force -Recurse -Verbose D:\arma3work\Pack\Addons\{{ inputs.objectvar }}* -Destination "D:\arma3work\Modpack_TestServer\@Vahana-Life-TestServer\addons\"
-            Copy-item -Force -Recurse -Verbose D:\arma3work\Pack\Addons\{{ inputs.objectvar }}* -Destination "D:\cloud\Shares\Modpack_TestServer\@Vahana-Life-TestServer\addons\"
-            Write-Host ""
-            rm D:\arma3work\Pack\Addons\{{ inputs.objectvar }}*
-            Write-Host ""
-            D:\arma3work\drive\_work\Remove_A3Sync.ps1
-            Write-Host ""
-            D:\arma3work\drive\_work\Upload_TestModpack.ps1
-            Write-Host ""
-            cd "C:\Program Files (x86)\ArmA3Sync"
-            java -jar ArmA3Sync.jar -BUILD "VahanaLifeTest"
-            Write-Host ""
-            D:\arma3work\drive\_work\Upload_A3SyncRepo.ps1
-      shell: pwsh
+      - run: D:\arma3work\drive\_work\Schedule_Task_Wait.ps1 {{ inputs.objectvar }}_Build
+       shell: powershell
+     
+     - run: rm D:\arma3work\Modpack_TestServer\@Vahana-Life-TestServer\addons\{{ inputs.objectvar }}*
+       shell: powershell
+     
+     - run: rm D:\cloud\Shares\Modpack_TestServer\@Vahana-Life-TestServer\addons\{{ inputs.objectvar }}*
+       shell: powershell
+     
+     - run: Copy-item -Force -Recurse -Verbose D:\arma3work\Pack\Addons\{{ inputs.objectvar }}* -Destination "D:\arma3work\Modpack_TestServer\@Vahana-Life-TestServer\addons\"
+       shell: powershell
+      
+      - run: Copy-item -Force -Recurse -Verbose D:\arma3work\Pack\Addons\{{ inputs.objectvar }}* -Destination "D:\cloud\Shares\Modpack_TestServer\@Vahana-Life-TestServer\addons\"
+       shell: powershell
+     
+     - run: rm D:\arma3work\Pack\Addons\{{ inputs.objectvar }}*
+       shell: powershell
+     
+     - run: D:\arma3work\drive\_work\Remove_A3Sync.ps1
+       shell: powershell
+     
+     - run: D:\arma3work\drive\_work\Upload_TestModpack.ps1
+       shell: powershell
+     
+     - run: D:\arma3work\drive\_work\Build_A3Sync.ps1
+       shell: powershell
+     
+     - run: D:\arma3work\drive\_work\Upload_A3SyncRepo.ps1
+       shell: powershell
